--- a/Header.css
+++ b/Header.css
@@ -40,13 +40,27 @@
 .headerContainer.listMode {
     margin: 20px 0px -90px 0px;
   }
+
+@media (max-width: 768px) {
+    .headerSearch {
+        height: 160px !important;
+        width: 400px!important;
+        left:50px;
+        top:330px;
+    flex-direction: column;
+    }
+  
+    .headerSearchItem {
+  margin-bottom: 10px; 
+    }
+  }
+  
 .headerSearch{
     height: 30px;
     background-color: white;
     border: 3px solid yellow;
     display: flex;
     justify-content: space-around;
-    margin-left: 130px;
     align-items: center;
     padding: 25px 0px;
     border-radius: 5px;
